--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="share-options">
       <img src="images/modal-message.gif" width="284" height="167" alt="Share the magic of Monsieur Pigeon with your chums" id="message" />
       <div id="links"><a href="http://www.facebook.com/"><img src="images/icon-facebook.png" width="25" height="25" alt="Facebook icon" /></a>
-      <a href="http://www.pinterest.com/"><img src="images/icon-facebook.png" width="25" height="25" alt="Pinterest icon" /></a>
+      <a href="http://www.pinterest.com/"><img src="images/icon-pinterest.png" width="25" height="25" alt="Pinterest icon" /></a>
       <a href="http://www.twitter.com/"><img src="images/icon-twitter.png" width="25" height="25" alt="Twitter icon" /></a></div>
     </div>
     <!-- 燈箱效果 END -->
